tests/NormalTests/paczka1/fuzzy1/35886243.err
Error in line 1: 0TT A144 60,0
Error in line 8: Dh9G4TsVh7 S278 36,0
Error in line 11: S691 S278 10,2
Error in line 16: kN1zVp4UOQ S278 18,0
Error in line 21: S691 S691 48,5
Error in line 24: kN1zVp4UOQ S798 89,3
Error in line 20: xB8F S798 27,3
Error in line 27: kN1zVp4UOQ A144 29,9
Error in line 30: hfdqdJvaTs A144 72,37
Error in line 26: hfdqdJvaTs S798 40,2
Error in line 36: Dh9G4TsVh7 A144 68,5
